--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Jost:wght@400;600;700;800&display=swap"
@@ -15,10 +15,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta
-            name="description"
-            content="Web site created using create-react-app"
+            name="title"
+            content="De lekkerste vega recepten van het web in één app | Swipe Your Bite"
         />
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+        <meta
+            name="description"
+            content="Swipe Your Bite bundelt de lekkerste vega recepten van het web in één app. Swipe en creëer je persoonlijke receptenboek."
+        />
+        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -33,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>React App</title>
+        <title>Swipe Your Bite</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
