--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,12 @@
         <title>Swipe Your Bite</title>
     </head>
     <body>
+        <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+            <input type="text" name="name" />
+            <input type="email" name="email" />
+            <input type="text" name="phone" />
+            <input type="text" name="website" />
+        </form>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
         <!--
