added netlify form

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,12 @@
         <title>Swipe Your Bite</title>
     </head>
     <body>
-        <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+        <form
+            name="food-blogger-contact-form"
+            netlify
+            netlify-honeypot="bot-field"
+            hidden
+        >
             <input type="text" name="name" />
             <input type="email" name="email" />
             <input type="text" name="phone" />
